# onad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
aberrant/: __init__.py
aberrant/base/: __init__.py  architecture.py  exceptions.py  transformer.py
aberrant/drift/: __init__.py  adwin.py  base.py  kswin.py  page_hinkley.py
aberrant/model/: __init__.py  null.py  quantile_threshold.py  random.py  threshold.py
aberrant/model/deep/: __init__.py  autoencoder.py  kitnet.py
aberrant/model/distance/: __init__.py  knn.py  lof.py  nets.py  sdostream.py  stare.py
aberrant/model/graph/: __init__.py  anoedge.py  isconna.py  midas.py  streamspot.py
aberrant/model/iforest/: __init__.py  asd.py  halfspace.py  mondrian.py  online.py  rand_hist.py  random_cut.py  xstream.py
aberrant/model/sketch/: __init__.py  loda.py  mstream.py  rshash.py
aberrant/model/stat/: __init__.py  multi.py  uni.py
aberrant/model/svm/: __init__.py  adaptive.py  gadget.py  todo.txt
aberrant/stream/: __init__.py  streamer.py
aberrant/stream/dataset/: __init__.py  loader.py  registry.py  streamers.py
aberrant/transform/: __init__.py
aberrant/transform/preprocessing/: __init__.py  scaler.py
aberrant/transform/projection/: __init__.py  incremental_pca.py  random_projection.py
aberrant/utils/deep/: architecture.py  loss_func.py
aberrant/utils/similar/: faiss_engine.py
docs/: changelog.md  contributing.md  index.md  installation.md  mkdocs.yml  quickstart.md
docs/api/: base.md  drift.md  index.md  stream.md  transform.md
docs/api/models/: core.md  deep.md  distance.md  graph.md  iforest.md  index.md  sketch.md  stat.md  svm.md
docs/examples/: index.md
docs/user_guide/: best_practices.md  evaluation.md  index.md  models.md  pipelines.md  streaming.md  transformers.md
examples/: adaptive_svm.py  asd_iforest.py  autoencoder.py  gadget_svm.py  knn.py  mondrian_iforest.py  online_iforest.py  pipeline.py  smd1.py
examples/models/: adaptive_svm.py  anoedge.py  asd_iforest.py  autoencoder.py  gadget_svm.py  isconna.py  kitnet.py  knn.py  loda.py  midas.py  mondrian_iforest.py  mstream.py  nets.py  online_iforest.py  random_cut_forest.py  rshash.py  sdostream.py  stare.py  streamRHF.py  streamspot.py  threshold.py  xstream.py
onad/: __init__.py
onad/base/: __init__.py  architecture.py  exceptions.py  metric.py  model.py  pipeline.py  similarity.py  streamer.py  transformer.py
onad/dataset/: loader.py  streamers.py
onad/drift/: __init__.py  adwin.py  kswin.py  page_hinkley.py
onad/metric/: pr_auc.py  roc_auc.py
onad/model/: __init__.py  asd_iforest.py  autoencoder.py  knn.py  null.py  quantile_threshold.py  random.py  threshold.py
onad/model/deep/: __init__.py  autoencoder.py
onad/model/distance/: __init__.py  knn.py  lof.py
onad/model/forest/: asd_iforest.py  online_iforest.py  random_hist_forest.py
onad/model/iforest/: __init__.py  asd.py  halfspace.py  mondrian.py  online.py  rand_hist.py  random_cut.py  xstream.py
onad/model/stat/: __init__.py  multi.py  multivariate.py  uni.py
onad/model/svm/: __init__.py  adaptive_svm.py  gadget_svm.py
onad/model/unsupervised/: asd_iforest.py  autoencoder.py  knn.py  mondrian_iforest.py
onad/stream/: __init__.py  streamer.py
onad/stream/dataset/: __init__.py  registry.py
onad/stream/resources/: shuttle.parquet
onad/transform/: __init__.py  pca.py  randprojections.py  scale.py
onad/transform/preprocess/: scaler.py
onad/transform/preprocessing/: __init__.py  scaler.py
onad/transform/project/: incremental_pca.py  random_projection.py
onad/transform/projection/: __init__.py  incremental_pca.py  random_projection.py
tests/: test_dataset_loader.py  test_pca.py  test_preprocessing.py  test_public_imports.py  test_public_imports_base.py  test_public_imports_extras.py  utils.py
tests/drift/: __init__.py  test_adwin.py  test_kswin.py  test_page_hinkley.py
tests/integration/: __init__.py  _settings.py  conftest.py  test_deep_autoencoder.py  test_deep_kitnet.py  test_distance_knn.py  test_distance_nets.py  test_distance_sdostream.py  test_distance_stare.py  test_graph_anoedge.py  test_graph_isconna.py  test_graph_midas.py  test_graph_streamspot.py  test_iforest_asd.py  test_iforest_mondrian.py  test_iforest_online.py  test_iforest_rand_hist.py  test_iforest_random_cut.py  test_iforest_xstream.py  test_null.py  test_random.py  test_sketch_loda.py  test_sketch_mstream.py  test_sketch_rshash.py  test_stat_multi.py  test_stat_uni.py  test_svm_adaptive.py  test_svm_gadget.py
tests/models/: test_adaptive_svm.py  test_asd_iforest.py  test_deep_autoencoder.py  test_deep_kitnet.py  test_distance_knn.py  test_distance_lof.py  test_distance_nets.py  test_distance_sdostream.py  test_distance_stare.py  test_graph_anoedge.py  test_graph_isconna.py  test_graph_midas.py  test_graph_streamspot.py  test_iforest_asd.py  test_iforest_halfspace.py  test_iforest_mondrian.py  test_iforest_online.py  test_iforest_rand_hist.py  test_iforest_random_cut.py  test_iforest_xstream.py  test_multivariant_moving.py  test_null.py  test_online_iforest.py  test_quantile_threshold.py  test_random.py  test_random_hist_forest.py  test_sketch_loda.py  test_sketch_mstream.py  test_sketch_rshash.py  test_stat_multi.py  test_stat_uni.py  test_svm_adaptive.py  test_svm_gadget.py  test_threshold.py  test_univariant_moving.py
tests/test_models_unsupervised/: test_adaptive_svm.py  test_asd_iforest.py  test_asd_isolation_forest.py  test_autoencoder.py  test_online_iforest.py
tests/test_pipelines/: test_preprocessing.py
tests/test_transformers/: test_pca.py  test_pca.r  test_pca_pipeline_integration.py  test_scaler.py
tests/transformers/: test_pca.py  test_pca_pipeline.py  test_pca_pipeline_integration.py  test_preprocessing.py  test_scaler.py
(+34 files in other folders)
