[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aberrant"
dynamic = ["version"]
description = "Online Anomaly Detection Models"
authors = [
    { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" },
    { name = "Pascal Heinzelmann" },
    { name = "Marius Hoell" },
    { name = "Marco Catoir" }
]
maintainers = [
  { name = "Oliver Hennhoefer", email = "oliver.hennhoefer@mail.de" }
]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "tqdm>=4.67.1",
    "scipy>=1.15.2"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<1.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "mypy>=1.13.0,<2.0.0",
    "scikit-learn>=1.6.1,<2.0.0",
    "torch>=2.6.0,<3.0.0",
]
docs = [
    "mkdocs",
    "mkdocs-material[imaging]",
    "mkdocstrings[python]",
]
eval = ["scikit-learn>=1.6.1,<2.0.0"]
dl = ["torch>=2.6.0,<3.0.0"]
benchmark = [
    "river>=0.22.0,<1.0.0",
    "pytest-benchmark>=5.0.0,<6.0.0",
]
faiss = ["faiss-cpu>=1.10.0,<2.0.0"]
all = [
    "ruff>=0.8.0,<1.0.0",
    "pre-commit>=4.0.0,<5.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "hypothesis>=6.0.0,<7.0.0",
    "mypy>=1.13.0,<2.0.0",
    "mkdocs",
    "mkdocs-material[imaging]",
    "mkdocstrings[python]",
    "scikit-learn>=1.6.1,<2.0.0",
    "torch>=2.6.0,<3.0.0",
    "river>=0.22.0,<1.0.0",
    "pytest-benchmark>=5.0.0,<6.0.0",
    # Keep in sync with the `faiss` extra above; avoid self-referential extras.
    "faiss-cpu>=1.10.0,<2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/OliverHennhoefer/aberrant"
"Bugs" = "https://github.com/OliverHennhoefer/aberrant/issues"
"Documentation" = "https://oliverhennhoefer.github.io/aberrant"
"Changelog" = "https://github.com/OliverHennhoefer/aberrant/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "aberrant/__init__.py"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "PL",  # pylint
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["aberrant"]

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "tqdm",
    "tqdm.*",
    "scipy",
    "scipy.stats",
    "scipy.*",
    "faiss",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aberrant.drift.kswin"]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
# Temporary typing tech debt.
# Keep this list frozen (do not add new modules) and remove entries incrementally.
# TODO: Track phased removal of this suppression block in a dedicated issue.
module = [
    "aberrant.model.iforest.asd",
    "aberrant.model.iforest.halfspace",
    "aberrant.model.iforest.mondrian",
    "aberrant.model.iforest.online",
    "aberrant.model.iforest.rand_hist",
    "aberrant.model.iforest.random_cut",
    "aberrant.model.stat.multi",
    "aberrant.model.stat.uni",
    "aberrant.model.svm.adaptive",
    "aberrant.model.svm.gadget",
    "aberrant.model.sketch.rshash",
    "aberrant.model.distance.lof",
    "aberrant.model.distance.sdostream",
    "aberrant.model.deep.autoencoder",
    "aberrant.utils.deep.architecture",
    "aberrant.transform.projection.incremental_pca",
]
ignore_errors = true
